--- a/axelor-purchase/src/main/resources/views/PurchaseOrder.xml
+++ b/axelor-purchase/src/main/resources/views/PurchaseOrder.xml
@@ -134,7 +134,8 @@
 	  		    <field name="shipmentMode" if-module="axelor-stock" form-view="shipment-mode-form" grid-view="shipment-mode-grid" onChange="action-purchase-order-record-empty-freight-carrier-mode" if="__config__.app.isApp('stock')" />
 				<field name="freightCarrierMode" domain="self.shipmentMode = :shipmentMode" if-module="axelor-stock" form-view="freight-carrier-mode-form" grid-view="freight-carrier-mode-grid" if="__config__.app.isApp('stock')" />
 				<panel-dashlet name="POStockMovesPanel" colSpan="12" action="action-purchase-order-view-stock-moves" height="178" showIf="statusSelect >= 3"/>
-		    </panel>
+				<field name="stockMoveComment" widget="html" colSpan="12" if="__config__.app.isApp('supplychain')" if-module="axelor-supplychain"/>
+			</panel>
 		    <panel name="projectPanel" if="__config__.app.isApp('business-project') &amp;&amp; __config__.app.getApp('business-project').getGenerateProjectOrder()" title="Business project" colSpan="12" if-module="axelor-business-project">
 				<field name="project" domain="self.isBusinessProject = true" form-view="project-form" grid-view="project-grid" colSpan="6"/>
 				<button name="updateLinesBtn" title="Update lines with selected project" onClick="save,action-business-project-purchase-order-method-update-lines,save" colSpan="6" readonlyIf="!project"/>
