--- a/axelor-stock/src/main/resources/views/StockMove.xml
+++ b/axelor-stock/src/main/resources/views/StockMove.xml
@@ -338,6 +338,7 @@
 
                 <field name="specificPackage" readonly="true" colSpan="12" showIf="specificPackage" if-module="axelor-supplychain" if="__config__.app.isApp('supplychain')"/>
                 <panel name="freightDetailPanel" stacked="true" colSpan="8">
+                    <field name="stockMoveComment" widget="html" colSpan="12"/>
                     <field name="isIspmRequired" showIf="!$readonly()"/>
                     <field name="$IspmTag" showTitle="false" showIf="$readonly()">
                         <viewer>
